 syntax = "proto3";
                
                message ExportTraceServiceRequest {
                    repeated ResourceSpans resource_spans = 1;
                }
                
                message ResourceSpans {
                    Resource resource = 1;
                    repeated ScopeSpans scope_spans = 2;
                }
                
                message Resource {
                    repeated KeyValue attributes = 1;
                    uint32 dropped_attributes_count = 2;
                }
                
                message ScopeSpans {
                    repeated Span spans = 1;
                }
                
                message Span {
                    bytes trace_id = 1;
                    bytes span_id = 2;
                    string name = 3;
                    uint64 start_time_unix_nano = 4;
                    uint64 end_time_unix_nano = 5;
                    repeated KeyValue attributes = 6;
                    Status status = 7;
                }
                
                message KeyValue {
                    string key = 1;
                    AnyValue value = 2;
                }
                
                message AnyValue {
                    oneof value {
                        string string_value = 1;
                        bool bool_value = 2;
                        int64 int_value = 3;
                        double double_value = 4;
                    }
                }
                
                message Status {
                    string message = 1;
                    uint32 code = 2;
                }